add login endpoint to obtain a token from clientId and secret
